[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 517, 133 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 9.39233 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="ColorRect" parent="."]
margin_top = 256.0
margin_right = 1024.0
margin_bottom = 608.0
color = Color( 0.101961, 0.286275, 0.0784314, 1 )

[node name="Sky" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sky"]
position = Vector2( 512, 128 )
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 448, 512 )
scale = Vector2( 2.93182, 3.64271 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 5, 0.607666 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Player"]
margin_left = 10.0
margin_top = 10.0
margin_right = 83.0
margin_bottom = 105.0
rect_scale = Vector2( -0.139444, -0.19784 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, -224 )

[node name="Enemy2" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 0 )

[node name="Enemy3" parent="." instance=ExtResource( 2 )]
position = Vector2( 992, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.9

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 46.0
rect_scale = Vector2( 4, 4 )

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
